# Assetbrowser

./: CMakeLists.txt  readme.md
src/: asset.cpp  asset.hpp  main.cpp
